Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 8.0.0
    • Qt Creator 8.0.0
    • All Other Issues
    • None
    • Linux/X11
    • 1a144b4bdd5abe8fbdfb2a854763ba27fd2a9efe 3f8644abff46ff9404fff4b120c844a938d0bf22 e981bedf68f34789d986c86076cca325b75feca8 51c798b5176b225d3bf90d9c97ff85dfc3ee4fa3 2453f4e60743b7b498702be5ee9a4c9c9a5bcf87 a0de1f1848f482e53cc76900893cbd5125e16937

    Description

      When Valgrind Memory Analyzer is run, after running Creator, opening settings and running the Test for linux device, and then closing Creator, the following leaks were revealed:

      552 (120 direct, 432 indirect) bytes in 1 blocks are definitely lost in loss record 2,461 of 2,578
        in Core::IContext::IContext(QObject*) in /home/jarek/dev/creator-master/src/plugins/coreplugin/icontext.h:74
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: QObject::QObject(QObject*) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.cpp:914
        3: Core::IContext::IContext(QObject*) in /home/jarek/dev/creator-master/src/plugins/coreplugin/icontext.h:74
        4: QmlProjectManager::Internal::DesignModeContext::DesignModeContext(QWidget*) in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/qdslandingpage.h:42
        5: QmlProjectManager::Internal::QmlProjectPlugin::initializeQmlLandingPage() in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/qmlprojectplugin.cpp:379
        6: QmlProjectManager::Internal::QmlProjectPlugin::initialize(QList<QString> const&, QString*) in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/qmlprojectplugin.cpp:267
        7: ExtensionSystem::Internal::PluginSpecPrivate::initializePlugin() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1123
        8: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1641
        9: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1366
        10: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        11: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      
      768 (88 direct, 680 indirect) bytes in 1 blocks are definitely lost in loss record 2,469 of 2,578
        in QmlProjectManager::GenerateCmake::CmakeProjectConverter::generateMenuEntry() in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/cmakegen/cmakeprojectconverter.cpp:64
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void**, QtPrivate::QSlotObjectBase*, int, int const*, QMetaObject const*) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.cpp:5064
        3: QObject::connectImpl(QObject const*, void**, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.cpp:4990
        4: std::enable_if<(((int)QtPrivate::FunctionPointer<void (*)()>::ArgumentCount)>=(0))&&(!QtPrivate::FunctionPointer<void (*)()>::IsPointerToMemberFunction), QMetaObject::Connection>::type QObject::connect<void (QAction::*)(bool), void (*)()>(QtPrivate::FunctionPointer<void (QAction::*)(bool)>::Object const*, void (QAction::*)(bool), QObject const*, void (*)(), Qt::ConnectionType) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.h:298
        5: std::enable_if<((int)QtPrivate::FunctionPointer<void (*)()>::ArgumentCount)>=(0), QMetaObject::Connection>::type QObject::connect<void (QAction::*)(bool), void (*)()>(QtPrivate::FunctionPointer<void (QAction::*)(bool)>::Object const*, void (QAction::*)(bool), void (*)()) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.h:266
        6: QmlProjectManager::GenerateCmake::CmakeProjectConverter::generateMenuEntry() in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/cmakegen/cmakeprojectconverter.cpp:64
        7: QmlProjectManager::Internal::QmlProjectPlugin::initialize(QList<QString> const&, QString*) in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/qmlprojectplugin.cpp:362
        8: ExtensionSystem::Internal::PluginSpecPrivate::initializePlugin() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1123
        9: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1641
        10: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1366
        11: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        12: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      
      2,288 (16 direct, 2,272 indirect) bytes in 1 blocks are definitely lost in loss record 2,517 of 2,578
        in QmlProjectManager::GenerateCmake::generateMenuEntry() in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/cmakegen/generatecmakelists.cpp:88
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: QmlProjectManager::GenerateCmake::generateMenuEntry() in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/cmakegen/generatecmakelists.cpp:88
        3: QmlProjectManager::Internal::QmlProjectPlugin::initialize(QList<QString> const&, QString*) in /home/jarek/dev/creator-master/src/plugins/qmlprojectmanager/qmlprojectplugin.cpp:361
        4: ExtensionSystem::Internal::PluginSpecPrivate::initializePlugin() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1123
        5: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1641
        6: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1366
        7: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        8: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      
      5,724 (16 direct, 5,708 indirect) bytes in 1 blocks are definitely lost in loss record 2,558 of 2,578
        in ProjectExplorer::Internal::BuildSystemOutputWindow::BuildSystemOutputWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:158
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: ProjectExplorer::Internal::BuildSystemOutputWindow::BuildSystemOutputWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:158
        3: ProjectExplorer::Internal::ProjectWindowPrivate::ProjectWindowPrivate(ProjectExplorer::Internal::ProjectWindow*) in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:629
        4: std::__detail::_MakeUniq<ProjectExplorer::Internal::ProjectWindowPrivate>::__single_object std::make_unique<ProjectExplorer::Internal::ProjectWindowPrivate, ProjectExplorer::Internal::ProjectWindow*>(ProjectExplorer::Internal::ProjectWindow*&&) in /usr/include/c++/12/bits/unique_ptr.h:1065
        5: ProjectExplorer::Internal::ProjectWindow::ProjectWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:821
        6: ProjectExplorer::ProjectExplorerPlugin::initialize(QList<QString> const&, QString*) in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectexplorer.cpp:916
        7: ExtensionSystem::Internal::PluginSpecPrivate::initializePlugin() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1123
        8: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1641
        9: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1366
        10: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        11: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      
      5,724 (424 direct, 5,300 indirect) bytes in 1 blocks are definitely lost in loss record 2,559 of 2,578
        in ProjectExplorer::Internal::BuildSystemOutputWindow::BuildSystemOutputWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:165
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: QApplicationPrivate::createActionPrivate() const in /home/jarek/dev/qt-63/qtbase/src/widgets/kernel/qaction_widgets.cpp:57
        3: QAction::QAction(QObject*) in /home/jarek/dev/qt-63/qtbase/src/gui/kernel/qaction.cpp:266
        4: ProjectExplorer::Internal::BuildSystemOutputWindow::BuildSystemOutputWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:165
        5: ProjectExplorer::Internal::ProjectWindowPrivate::ProjectWindowPrivate(ProjectExplorer::Internal::ProjectWindow*) in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:629
        6: std::__detail::_MakeUniq<ProjectExplorer::Internal::ProjectWindowPrivate>::__single_object std::make_unique<ProjectExplorer::Internal::ProjectWindowPrivate, ProjectExplorer::Internal::ProjectWindow*>(ProjectExplorer::Internal::ProjectWindow*&&) in /usr/include/c++/12/bits/unique_ptr.h:1065
        7: ProjectExplorer::Internal::ProjectWindow::ProjectWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:821
        8: ProjectExplorer::ProjectExplorerPlugin::initialize(QList<QString> const&, QString*) in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectexplorer.cpp:916
        9: ExtensionSystem::Internal::PluginSpecPrivate::initializePlugin() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1123
        10: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1641
        11: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1366
        12: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        13: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      
      5,752 (424 direct, 5,328 indirect) bytes in 1 blocks are definitely lost in loss record 2,560 of 2,578
        in ProjectExplorer::Internal::BuildSystemOutputWindow::BuildSystemOutputWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:113
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: QApplicationPrivate::createActionPrivate() const in /home/jarek/dev/qt-63/qtbase/src/widgets/kernel/qaction_widgets.cpp:57
        3: QAction::QAction(QObject*) in /home/jarek/dev/qt-63/qtbase/src/gui/kernel/qaction.cpp:266
        4: ProjectExplorer::Internal::BuildSystemOutputWindow::BuildSystemOutputWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:113
        5: ProjectExplorer::Internal::ProjectWindowPrivate::ProjectWindowPrivate(ProjectExplorer::Internal::ProjectWindow*) in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:629
        6: std::__detail::_MakeUniq<ProjectExplorer::Internal::ProjectWindowPrivate>::__single_object std::make_unique<ProjectExplorer::Internal::ProjectWindowPrivate, ProjectExplorer::Internal::ProjectWindow*>(ProjectExplorer::Internal::ProjectWindow*&&) in /usr/include/c++/12/bits/unique_ptr.h:1065
        7: ProjectExplorer::Internal::ProjectWindow::ProjectWindow() in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectwindow.cpp:821
        8: ProjectExplorer::ProjectExplorerPlugin::initialize(QList<QString> const&, QString*) in /home/jarek/dev/creator-master/src/plugins/projectexplorer/projectexplorer.cpp:916
        9: ExtensionSystem::Internal::PluginSpecPrivate::initializePlugin() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1123
        10: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1641
        11: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1366
        12: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        13: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      
      12,934 (120 direct, 12,814 indirect) bytes in 1 blocks are definitely lost in loss record 2,568 of 2,578
        in Utils::BaseAspect::BaseAspect() in /home/jarek/dev/creator-master/src/libs/utils/aspects.cpp:113
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: QObject::QObject(QObject*) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.cpp:914
        3: Utils::BaseAspect::BaseAspect() in /home/jarek/dev/creator-master/src/libs/utils/aspects.cpp:113
        4: Utils::IntegerAspect::IntegerAspect() in /home/jarek/dev/creator-master/src/libs/utils/aspects.cpp:1758
        5: Autotest::Internal::CTestSettings::CTestSettings() in /home/jarek/dev/creator-master/src/plugins/autotest/ctest/ctestsettings.cpp:35
        6: Autotest::Internal::CTestTool::CTestTool() in /home/jarek/dev/creator-master/src/plugins/autotest/ctest/ctesttool.h:37
        7: Autotest::Internal::AutotestPluginPrivate::AutotestPluginPrivate() in /home/jarek/dev/creator-master/src/plugins/autotest/autotestplugin.cpp:150
        8: Autotest::Internal::AutotestPlugin::initialize(QList<QString> const&, QString*) in /home/jarek/dev/creator-master/src/plugins/autotest/autotestplugin.cpp:302
        9: ExtensionSystem::Internal::PluginSpecPrivate::initializePlugin() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1123
        10: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1641
        11: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1366
        12: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        13: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      
      18,407 (88 direct, 18,319 indirect) bytes in 1 blocks are definitely lost in loss record 2,570 of 2,578
        in Core::Internal::FancyTab::FancyTab(QWidget*) in /home/jarek/dev/creator-master/src/plugins/coreplugin/fancytabwidget.h:56
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: QObjectPrivate::connectImpl(QObject const*, int, QObject const*, void**, QtPrivate::QSlotObjectBase*, int, int const*, QMetaObject const*) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.cpp:5064
        3: QObject::connectImpl(QObject const*, void**, QObject const*, void**, QtPrivate::QSlotObjectBase*, Qt::ConnectionType, int const*, QMetaObject const*) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.cpp:4990
        4: std::enable_if<(QtPrivate::FunctionPointer<QPropertyAnimation::setTargetObject(QObject*)::{lambda()#1}>::ArgumentCount==(-1))&&(!(is_convertible_v<QPropertyAnimation::setTargetObject(QObject*)::{lambda()#1}, char const*>)), QMetaObject::Connection>::type QObject::connect<void (QObject::*)(QObject*), QPropertyAnimation::setTargetObject(QObject*)::{lambda()#1}>(QtPrivate::FunctionPointer<void (QObject::*)(QObject*)>::Object const*, void (QObject::*)(QObject*), QObject const*, QPropertyAnimation::setTargetObject(QObject*)::{lambda()#1}, Qt::ConnectionType) in /home/jarek/dev/qt-63/qtbase/src/corelib/kernel/qobject.h:343
        5: QPropertyAnimation::setTargetObject(QObject*) in /home/jarek/dev/qt-63/qtbase/src/corelib/animation/qpropertyanimation.cpp:205
        6: Core::Internal::FancyTab::FancyTab(QWidget*) in /home/jarek/dev/creator-master/src/plugins/coreplugin/fancytabwidget.h:56
        7: Core::Internal::FancyTabBar::insertTab(int, QIcon const&, QString const&, bool) in /home/jarek/dev/creator-master/src/plugins/coreplugin/fancytabwidget.h:102
        8: Core::Internal::FancyTabWidget::insertTab(int, QWidget*, QIcon const&, QString const&, bool) in /home/jarek/dev/creator-master/src/plugins/coreplugin/fancytabwidget.cpp:551
        9: Core::ModeManagerPrivate::appendMode(Core::IMode*) in /home/jarek/dev/creator-master/src/plugins/coreplugin/modemanager.cpp:233
        10: Core::ModeManagerPrivate::extensionsInitializedHelper() in /home/jarek/dev/creator-master/src/plugins/coreplugin/modemanager.cpp:215
        11: Core::ModeManager::extensionsInitialized() in /home/jarek/dev/creator-master/src/plugins/coreplugin/modemanager.cpp:204
        12: Core::Internal::MainWindow::extensionsInitialized() in /home/jarek/dev/creator-master/src/plugins/coreplugin/mainwindow.cpp:319
        13: Core::Internal::CorePlugin::extensionsInitialized() in /home/jarek/dev/creator-master/src/plugins/coreplugin/coreplugin.cpp:259
        14: ExtensionSystem::Internal::PluginSpecPrivate::initializeExtensions() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1151
        15: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1608
        16: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins()::{lambda(ExtensionSystem::PluginSpec*)#1}::operator()(ExtensionSystem::PluginSpec*) const in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1370
        17: void Utils::reverseForeach<QList<ExtensionSystem::PluginSpec*>, ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins()::{lambda(ExtensionSystem::PluginSpec*)#1}>(QList<ExtensionSystem::PluginSpec*> const&, ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins()::{lambda(ExtensionSystem::PluginSpec*)#1} const&) in /home/jarek/dev/creator-master/src/libs/utils/algorithm.h:1041
        18: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1369
        19: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        20: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      
      82,483 (560 direct, 81,923 indirect) bytes in 5 blocks are definitely lost in loss record 2,578 of 2,578
        in Core::Internal::FancyTabBar::insertTab(int, QIcon const&, QString const&, bool) in /home/jarek/dev/creator-master/src/plugins/coreplugin/fancytabwidget.h:102
        1: operator new(unsigned long) in /builddir/build/BUILD/valgrind-3.19.0/coregrind/m_replacemalloc/vg_replace_malloc.c:422
        2: Core::Internal::FancyTabBar::insertTab(int, QIcon const&, QString const&, bool) in /home/jarek/dev/creator-master/src/plugins/coreplugin/fancytabwidget.h:102
        3: Core::Internal::FancyTabWidget::insertTab(int, QWidget*, QIcon const&, QString const&, bool) in /home/jarek/dev/creator-master/src/plugins/coreplugin/fancytabwidget.cpp:551
        4: Core::ModeManagerPrivate::appendMode(Core::IMode*) in /home/jarek/dev/creator-master/src/plugins/coreplugin/modemanager.cpp:233
        5: Core::ModeManagerPrivate::extensionsInitializedHelper() in /home/jarek/dev/creator-master/src/plugins/coreplugin/modemanager.cpp:215
        6: Core::ModeManager::extensionsInitialized() in /home/jarek/dev/creator-master/src/plugins/coreplugin/modemanager.cpp:204
        7: Core::Internal::MainWindow::extensionsInitialized() in /home/jarek/dev/creator-master/src/plugins/coreplugin/mainwindow.cpp:319
        8: Core::Internal::CorePlugin::extensionsInitialized() in /home/jarek/dev/creator-master/src/plugins/coreplugin/coreplugin.cpp:259
        9: ExtensionSystem::Internal::PluginSpecPrivate::initializeExtensions() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginspec.cpp:1151
        10: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin(ExtensionSystem::PluginSpec*, ExtensionSystem::PluginSpec::State) in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1608
        11: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins()::{lambda(ExtensionSystem::PluginSpec*)#1}::operator()(ExtensionSystem::PluginSpec*) const in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1370
        12: void Utils::reverseForeach<QList<ExtensionSystem::PluginSpec*>, ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins()::{lambda(ExtensionSystem::PluginSpec*)#1}>(QList<ExtensionSystem::PluginSpec*> const&, ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins()::{lambda(ExtensionSystem::PluginSpec*)#1} const&) in /home/jarek/dev/creator-master/src/libs/utils/algorithm.h:1041
        13: ExtensionSystem::Internal::PluginManagerPrivate::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:1369
        14: ExtensionSystem::PluginManager::loadPlugins() in /home/jarek/dev/creator-master/src/libs/extensionsystem/pluginmanager.cpp:338
        15: main in /home/jarek/dev/creator-master/src/app/main.cpp:747
      

      Attachments

        Activity

          People

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: