DesignModeContext: Don't leak context on shutdown

Make passed widget a parent of the context.

Fixes: QTCREATORBUG-27570
Change-Id: Ifbc9db8d5b3fb95566e2c6b83df9c10d02f7c0e5
Reviewed-by: Eike Ziller <eike.ziller@qt.io>